# the-true-validator

./: .gitignore  Dockerfile  LICENSE  README.md  apps.txt  codes.json  core_packages.txt  docker-compose.yml  entrypoint.sh  example.py  fill_database.py  generations.json  id_number_info.txt  initialize_logs.py  logger_config.py  logging_utils.py  pyproject.toml  requirements.txt  throttle_test.py
config/gunicorn/: gunicorn.conf.py
config/nginx/: nginx.conf
config/supervisor/: supervisord.conf
core/: urls.py  views.py
core/settings/: __init__.py  base.py  production.py
locale/ar/LC_MESSAGES/: django.mo  django.po
templates/: home.html
validatorApi/: admin.py  apps.py  constants.py  id_validator.py  models.py  serializers.py  tests.py  urls.py  views.py
validatorApi/management/commands/: clear_validation_cache.py  revoke_user_tokens.py
validatorApi/migrations/: 0001_initial.py
